[package]
name = "get_user_input"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Deep Sea Lolicon <36293056+LeeJiaLe@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/LeeJiaLe/get_user_input"
readme = "README.md"
description = "Get user input with few line of code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
